--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -8,22 +8,28 @@ on:
 
 jobs:
     build:
-        runs-on: ununtu-latest
+        runs-on: ubuntu-latest
         strategy:
             matrix:
-                python-version: [3.9,3.10]
+                python-version: ["3.9","3.10"]
         steps:
             - uses: actions/chekout@v2
             - name: Install python ${{matrix.python-version}}
               uses: actions/setup-python@v2
               with:
                 python-version: ${{matrix.python-version}}
-            - name: Install deps
+            - name: Install dependencies
               run: |
                   python -m pip install --upgrade pip
-                  pip install -r requirements.txt
-            - name: Run flake8 
-              run: flake8 .
-            - name: Run mupy
-              run: mypy .
+                  pip install flake8 pytest
+                  if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+            - name: Lint with flake8
+              run: |
+                  # stop the build if there are Python syntax errors or undefined names
+                  flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+                  # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+                  flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+            - name: Test with pytest
+              run: |
+              pytest
         
