--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -13,7 +13,7 @@ jobs:
             matrix:
                 python-version: ["3.9","3.10"]
         steps:
-            - uses: actions/chekout@v2
+            - uses: actions/checkout@v2
             - name: Install python ${{matrix.python-version}}
               uses: actions/setup-python@v2
               with:
